Restructering, cleanup and prepare for open source repository

--- a/craws/templates/index.html
+++ b/craws/templates/index.html
@@ -5,5 +5,5 @@
         This site gives an overview of projects we're involved.
     </div>
     {{ content|safe }}
-    <script src="/static/js/functions.js"></script>
+    <script src="/static/functions.js"></script>
 {% endblock %}
