--- a/craws/templates/403.html
+++ b/craws/templates/403.html
@@ -4,8 +4,8 @@
     <title>403 - Forbidden</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="robots" content="noindex"/>
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
-    <link rel="stylesheet" type="text/css" href="/static/css/color.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/style.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/color.css"/>
 </head>
 <body>
 <div id="header">
