--- a/craws/templates/layout.html
+++ b/craws/templates/layout.html
@@ -9,10 +9,10 @@
     <link rel="manifest" href="/favicon/manifest.json"/>
     <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg"/>
     <meta name="theme-color" content="#ffffff"/>
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
-    <link rel="stylesheet" type="text/css" href="/static/css/color.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/style.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/color.css"/>
     {% if page == "index": %}
-    <script src="/static/js/jquery/jquery-3.1.1.min.js"></script>
+    <script src="/static/vendor/jquery-3.3.1.min.js"></script>
     {% endif %}
 </head>
 <body>
