--- a/craws/static/style.css
+++ b/craws/static/style.css
@@ -21,7 +21,8 @@ span.craws {
 }
 
 #intro-text {
-    margin-bottom: 1em;
+    margin-top: 1em;
+    margin-bottom: 2em;
 }
 
 div.clear-both {
@@ -77,7 +78,7 @@ div.screenshot a {
 
 div.project {
     width: 1000px;
-    padding-top: 2.5em;
+    padding-top: 2em;
 }
 
 #menu {
