--- a/craws/templates/index.html
+++ b/craws/templates/index.html
@@ -2,7 +2,7 @@
 {% block body %}
     <div id="intro-text">
         We are some <a href="/team">guys</a> located in Austria, Vienna who enjoy working together.
-        This site gives an overview of projects we're involved.
+        This site gives an overview of some projects we're involved.
     </div>
     {{ content|safe }}
     <script src="/static/functions.js"></script>
