Update team page

--- a/craws/templates/team.html
+++ b/craws/templates/team.html
@@ -27,8 +27,8 @@
     <div class="team">
         <div>
             <p>Former Members</p>
-            <img src="/static/images/team/christof.png" alt="Christof" /><br />
-            Christof Rauchenberger
+            Christof Rauchenberger<br />
+            David Bra
         </div>
     </div>
 {% endblock %}
