--- a/craws/templates/index.html
+++ b/craws/templates/index.html
@@ -2,9 +2,9 @@
 {% block body %}
     <p>
         We are some <a href="/team">guys</a> located in Austria, Vienna who enjoy working together and this site gives an overview of some
-        projects we have been involved with. Over the past few years our focus shifted more and more to the open source project
-        <a target="_blank" rel="noopener" href="https://openatlas.eu">OpenAtlas</a> on which we work with our colleagues from the
-        <a target="_blank" rel="noopener" href="https://openatlas.eu">ACDH-CH</a> and other scientific institutes from all over the world.
+        projects we have been involved with. Over the past few years our focus shifted to the open source project
+        <a target="_blank" rel="noopener" href="https://openatlas.eu">OpenAtlas</a> on which we work with colleagues at the
+        <a target="_blank" rel="noopener" href="https://oeaw.ac.at">ACDH-CH</a> and other scientific institutes around the world.
     </p>
     {{ tags|safe }}
     <script src="/static/functions.js"></script>
