Reformatting HTML tags

--- a/craws/templates/index.html
+++ b/craws/templates/index.html
@@ -28,7 +28,7 @@
                         {% endfor %}
                         <div class="clear-both"></div>
                         {% for name, url in project.urls.items() %}
-                            {{ name }}: <a target="_blank" rel="noopener" href="{{ url }}">{{ url|base_url }}</a><br/>
+                            {{ name }}: <a target="_blank" rel="noopener" href="{{ url }}">{{ url|base_url }}</a><br>
                         {% endfor %}
                     </div>
                 </div>
