--- a/craws/templates/404.html
+++ b/craws/templates/404.html
@@ -2,15 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <title>404 - File not found</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="robots" content="noindex"/>
-    <link rel="stylesheet" type="text/css" href="/static/style.css"/>
-    <link rel="stylesheet" type="text/css" href="/static/color.css"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="robots" content="noindex">
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
 </head>
 <body>
 <div id="header">
     <a href="http://craws.net">
-        <img id="logo" src="/static/images/craws.png" alt="Creating Reality and Advanced Web Systems"/>
+        <img id="logo" src="/static/images/craws.png" alt="Creating Reality and Advanced Web Systems">
     </a>
 </div>
 <div id="content">
