--- a/craws/templates/layout.html
+++ b/craws/templates/layout.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <title>CRAWS</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" href="/favicon/favicon-32x32.png" sizes="32x32"/>
-    <link rel="icon" type="image/png" href="/favicon/favicon-16x16.png" sizes="16x16"/>
-    <link rel="manifest" href="/favicon/manifest.json"/>
-    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg"/>
-    <meta name="theme-color" content="#ffffff"/>
-    <link rel="stylesheet" type="text/css" href="/static/style.css"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/favicon/manifest.json">
+    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
     {% if page == "index": %}
         <script src="/static/vendor/jquery-3.5.1.min.js"></script>
     {% endif %}
@@ -17,7 +17,7 @@
 <body>
     <div id="header">
         <a href="http://craws.net">
-            <img id="logo" src="/static/images/craws.png" alt="Creating Reality and Advanced Web Systems"/>
+            <img id="logo" src="/static/images/craws.png" alt="Creating Reality and Advanced Web Systems">
         </a>
         <div id="tagline">
             <span class="craws">C</span>reating
