--- a/craws/templates/layout.html
+++ b/craws/templates/layout.html
@@ -11,12 +11,12 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" type="text/css" href="/static/style.css">
     {% if page == "index": %}
-        <script src="/static/vendor/jquery-3.5.1.min.js"></script>
+        <script src="/static/vendor/jquery-3.6.0.min.js"></script>
     {% endif %}
 </head>
 <body>
     <div id="header">
-        <a href="http://craws.net">
+        <a href="https://craws.net">
             <img id="logo" src="/static/images/craws.png" alt="Creating Reality and Advanced Web Systems">
         </a>
         <div id="tagline">
