--- a/craws/templates/index.html
+++ b/craws/templates/index.html
@@ -1,41 +1,39 @@
 {% extends "layout.html" %}
 {% block body %}
-    <p>
-        We are some <a href="/team">guys</a> located in Austria, Vienna who enjoy working together and this site gives
-        an overview of projects we have been involved with. Over the past few years our focus shifted to the open
-        source project
-        <a target="_blank" rel="noopener" href="https://openatlas.eu">OpenAtlas</a>
-        on which we work with colleagues at the
-        <a target="_blank" rel="noopener" href="https://www.oeaw.ac.at/acdh">ACDH-CH</a>
-        and other scientific institutes around the world.
-    </p>
-    {{ tags|safe }}
-    <script src="/static/functions.js"></script>
-    <div id="projects">
-        {% for name, project in projects.items() %}
-            <div class="clear-both">
-                <div class="project {{' '.join(project.tags_sanitized) }}">
-                    <div class="screenshot">
-                        <a target="_blank" rel="noopener" href="{{ project.main_url }}">
-                            <img src="/static/images/projects/{{ project.image }}" alt="{{ name }}">
-                        </a>
-                    </div>
-                    <div class="project-info">
-                        <span class="project-name">{{ name }}</span>
-                        <span class="project-date">{{ project.date }}</span>
-                        <p class="project-detail">{{ project.description }}</p>
-                        {% for tag in project.tags %}
-                            <div class="tag {{ tag|sanitize }}">
-                                {{ tag }}
-                            </div>
-                        {% endfor %}
-                        <div class="clear-both"></div>
-                        {% for name, url in project.urls.items() %}
-                            {{ name }}: <a target="_blank" rel="noopener" href="{{ url }}">{{ url|base_url }}</a><br>
-                        {% endfor %}
-                    </div>
-                </div>
+<p>
+  We are some <a href="/team">guys</a> located in Austria, Vienna who enjoy working together and this site gives an
+  overview of projects we have been involved with. Over the past few years our focus shifted to the open source project
+  <a target="_blank" rel="noopener" href="https://openatlas.eu">OpenAtlas</a> on which we work with colleagues at the
+  <a target="_blank" rel="noopener" href="https://www.oeaw.ac.at/acdh">ACDH-CH</a> and other scientific institutes
+  around the world.
+</p>
+{{ tags|safe }}
+<script src="/static/functions.js"></script>
+<div id="projects">
+  {% for name, project in projects.items() %}
+    <div class="clear-both">
+      <div class="project {{' '.join(project.tags_sanitized) }}">
+        <div class="screenshot">
+          <a target="_blank" rel="noopener" href="{{ project.main_url }}">
+            <img src="/static/images/projects/{{ project.image }}" alt="{{ name }}">
+          </a>
+        </div>
+        <div class="project-info">
+          <span class="project-name">{{ name }}</span>
+          <span class="project-date">{{ project.date }}</span>
+          <p class="project-detail">{{ project.description }}</p>
+          {% for tag in project.tags %}
+            <div class="tag {{ tag|sanitize }}">
+              {{ tag }}
             </div>
-        {% endfor %}
+          {% endfor %}
+          <div class="clear-both"></div>
+          {% for name, url in project.urls.items() %}
+            {{ name }}: <a target="_blank" rel="noopener" href="{{ url }}">{{ url|base_url }}</a><br>
+          {% endfor %}
+        </div>
+      </div>
     </div>
+  {% endfor %}
+</div>
 {% endblock %}
