--- a/craws/templates/layout.html
+++ b/craws/templates/layout.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="theme-color" content="#ffffff">
   <title>CRAWS</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="/favicon/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="/favicon/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="/favicon/manifest.json">
-  <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="/static/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/static/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="/static/manifest.json">
+  <link rel="mask-icon" href="/static/safari-pinned-tab.svg">
   <link rel="stylesheet" type="text/css" href="/static/style.css">
   {% if page == "index": %}
     <script src="/static/vendor/jquery-3.6.0.min.js"></script>
